django cms basic templates created

--- a/templates/cms/home.html
+++ b/templates/cms/home.html
@@ -107,5 +107,11 @@
             </div>
         </div>
     </div>
-{% include "cms/home_logo_section.html" %}
+    <div class="logo_section_block">
+        <div class="patient_container">
+            <div class="owl-carousel links_block" id="logoSection">
+                   {% placeholder "Logo Section" %} 
+            </div>
+        </div>
+    </div>
 {% endblock %}
