--- a/templates/user_profile/login.html
+++ b/templates/user_profile/login.html
@@ -4,7 +4,7 @@
 
         <div class="banner_section1">
             <div class="login_section">
-                <form class="login_form_container " id="logn_form" action="{% url 'user_profile:login' %}" method="post">{% csrf_token %}
+                <form class="login_form_container " id="logn_form" name="logn_form"  action="{% url 'user_profile:check_user_existance' %}" method="post">{% csrf_token %}
                     <div class="register"><span>{% trans 'Don\'t have an account?' %}</span><span><a href="#">{% trans 'Register Here' %}</a></span></div>
                     <div class="row">
                         <div class="col-12">
@@ -28,8 +28,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="email_address">{{ form.password }}
-                                        <span class="mail_icon"><img src={% static "images/lock.svg" %}
-                                                alt="enter the "></span>
+                                        <span class="mail_icon"><img src={% static "images/lock.svg" %} alt="enter the "></span>
                                         <span class="eye_icon "><img class="show_password" src={% static "images/eye.svg" %}
                                                 alt="press the eye password"></span>
                                     </label>
@@ -53,20 +52,68 @@
             </div>
         </div>
 <div class="modal fade forgot_pwd" id="forgetPassward" tabindex="-1" role="dialog" aria-hidden="true">
-{#    <div class="modal-dialog modal-full" role="document">#}
-{#      <div class="modal-content width_change">#}
-            <div class="box1"></div>
-            <ul class="list-unstyled d-flex">
-                <li class="list-link"><a href="#"></a></li>
-                <button class="list-link1 close clr_tct" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">Close</span>
-                </button>
-            </ul>
+    <div class="box1"></div>
+    <ul class="list-unstyled d-flex">
+        <li class="list-link"><a href="#"></a></li>
+        <button class="list-link1 close clr_tct" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">Close</span>
+        </button>
+    </ul>
+</div>
+<!-- Application Type selection popup -->
+<div class="modal fade" role="dialog" id="loginRole">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Login App</h2>
+                    <span>Choose App type</span>
+                    <button class="close" data-dismiss="modal" aria-label="close">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="login_container">
+                        <div class="options active" data-info="case_history">
+                            <div class="option_block">
+                                <img src={% static "images/tick.svg" %} class="tick_mark" alt="if you click the field the tick will appear">
+                                <span><svg xmlns="http://www.w3.org/2000/svg" width="18.913" height="18.913" viewBox="0 0 18.913 18.913">
+                                        <g transform="translate(0)">
+                                            <path class="a" d="M16.143,12.226A9.42,9.42,0,0,0,12.55,9.972a5.467,5.467,0,1,0-6.187,0A9.471,9.471,0,0,0,0,18.913H1.478a7.979,7.979,0,1,1,15.958,0h1.478A9.4,9.4,0,0,0,16.143,12.226ZM9.457,9.457a3.989,3.989,0,1,1,3.989-3.989A3.994,3.994,0,0,1,9.457,9.457Z" transform="translate(0)" />
+                                        </g>
+                                    </svg></span>
+                                <span>CASE HISTORY</span>
+                            </div>
+                        </div>
+                        <div class="options" data-info="ccrh">
+                            <div class="option_block">
+                                <img src={% static "images/tick.svg" %} class="tick_mark" alt="if you click the field the tick will appear">
+                                <span><svg xmlns="http://www.w3.org/2000/svg" width="20.425" height="23.864" viewBox="0 0 20.425 23.864">
+                                        <defs> <style> .a { fill: #191919; } </style> </defs>
+                                        <g transform="translate(-24.882)">
+                                            <g transform="translate(24.882)">
+                                                <path class="a" d="M44.506.8A2.674,2.674,0,0,0,42.6,0H27.591a2.674,2.674,0,0,0-1.907.8,2.674,2.674,0,0,0-.8,1.907v14.98a2.674,2.674,0,0,0,.8,1.907,2.768,2.768,0,0,0,1.907.774h3.731L32.4,21.7l.028.028,1.244,1.52a1.732,1.732,0,0,0,1.023.58,2.123,2.123,0,0,0,1.161-.111,1.489,1.489,0,0,0,.359-.193,1.788,1.788,0,0,0,.249-.221l.055-.055,1.244-1.52.028-.028,1.078-1.327H42.6a2.737,2.737,0,0,0,2.709-2.709V2.709A2.674,2.674,0,0,0,44.506.8ZM43.9,17.689a1.253,1.253,0,0,1-.387.912,1.318,1.318,0,0,1-.912.387H38.508a.684.684,0,0,0-.58.3l-1.244,1.493-.028.028L35.385,22.36c-.028,0-.028.028-.055.028a.539.539,0,0,1-.359.028.66.66,0,0,1-.193-.083l-1.244-1.52-.028-.028-1.244-1.52c0-.028-.028-.028-.028-.055a.721.721,0,0,0-.58-.3H27.591a1.253,1.253,0,0,1-.912-.387,1.318,1.318,0,0,1-.387-.912V2.709h.028a1.253,1.253,0,0,1,.387-.912,1.318,1.318,0,0,1,.912-.387H42.6a1.253,1.253,0,0,1,.912.387,1.318,1.318,0,0,1,.387.912Z" transform="translate(-24.882)" />
+                                            </g>
+                                            <g transform="translate(31.432 3.372)">
+                                                <path class="a" d="M125.9,49.85a3.645,3.645,0,1,0-5.141,5.169,3.733,3.733,0,0,0,2.57,1.05,3.635,3.635,0,0,0,2.57-6.219Zm-1,4.174a2.239,2.239,0,0,1-3.814-1.575,2.354,2.354,0,0,1,.663-1.575,2.228,2.228,0,1,1,3.151,3.151Z" transform="translate(-119.682 -48.8)" />
+                                            </g>
+                                            <g transform="translate(28.142 11.028)">
+                                                <path class="a" d="M83.807,160.816a10.008,10.008,0,0,0-9.563,0,3.988,3.988,0,0,0-2.183,3.289v.663a.691.691,0,0,0,.691.719H85.272a.714.714,0,0,0,.719-.719v-.663A3.917,3.917,0,0,0,83.807,160.816Zm-10.365,3.261a2.731,2.731,0,0,1,1.493-2.045,8.582,8.582,0,0,1,8.126,0,2.665,2.665,0,0,1,1.493,2.045Z" transform="translate(-72.059 -159.6)" />
+                                            </g>
+                                        </g>
+                                    </svg></span>
+                                <span>CCRH</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="continue_button">
+                        <button class="app_type_submit">Continue</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    </div>
-</div>
 
+    <!-- modal login role ends -->
 {% endblock %}
 {% block custom-js %}
 
@@ -79,5 +126,28 @@
     x.type = "password";
   }
 });
-/********* Showing & Hiding Password on click - ends *******/
+
+//Based on App selection or user existance submitting form to App - Start
+{% if user_existance_in_app == 'both' %}
+    $("#loginRole").modal();
+{% elif user_existance_in_app %}
+    app_submit('{{ user_existance_in_app }}');
+{% endif %}
+
+$(".app_type_submit").on('click', function(){
+    app_type = $(".options.active").data('info');
+    app_submit(app_type);
+});
+
+function app_submit(app_type){
+    if(app_type=='case_history'){
+        $('#logn_form').attr('action', '{{ case_action_url }}');
+    }
+    else if(app_type=='ccrh'){
+        $('#logn_form').attr('action', '{% url 'user_profile:login' %}');
+    }
+    $("#password").replaceWith('<input type="password" name="password" value="{{ password }}" id="password" >');
+    document.logn_form.submit();
+}
+//Based on App selection or user existance submitting form to App - End
 {% endblock %}
