--- a/templates/cms/contact_us.html
+++ b/templates/cms/contact_us.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load i18n staticfiles cms_tags cms_static sekizai_tags %}
 {% block content %} 
-    <div class="aboutus_container">
+    <div class="contactus_container">
         <div class="patient_container">
             <div class="row">
                 <div class="col sm-12 col-md-12 col-lg-12">
                     <div class="about_us_block contact-us">
-                        {% placeholder "Contact Us Form" %}
+                        {% placeholder "Contact Us Section" %}
                     </div>
                 </div>
             </div>
