--- a/templates/user_profile/login.html
+++ b/templates/user_profile/login.html
@@ -23,7 +23,7 @@
                                     {{ form.username }}
                                         <span class="mail_icon"><img src={% static "images/email.svg" %}
                                                 alt="enter the email address"></span>
-                                        <span class="email_login_txt">{% trans 'Login With Your Email or Mobile No.' %}</span>
+                                        <span class="email_login_txt">{% trans 'Login With Your Email.' %}</span>
                                     </label>
                                 </div>
                                 <div class="form-group">
