--- a/templates/header.html
+++ b/templates/header.html
@@ -33,9 +33,10 @@
                                     alt="logo for the website"></a>
                         </figure>
                         <div class="company_name my-auto">
-                            <p>{% trans 'An ISO 9001:2008 Certified Organization' %}</p>
-                            <h1>{% trans 'Clinical Cases Registry in Homeopathy' %}</h1>
-                            <p>{% trans 'Ministry of AYUSH' %}</p>
+                            <!-- <p>{% trans 'An ISO 9001:2008 Certified Organization' %}</p> -->
+                            <h1>{% trans 'Homoeopathic Clinical Case Registry' %}</h1>
+                            <p>{% trans 'Central Council for Research in Homoeopathy' %}</p>
+                            <p>{% trans 'Ministry of AYUSH, Govt. of India' %}</p>
                         </div>
                     </div>
                     <figure>
